# wxHelloWorld

./: .gitignore  CMakeLists.txt  Info.plist  README.md  build.sh
src/: main.cpp  main.hpp
